frame/support/test/tests/pallet_ui/step_008.stderr
error: Invalid pallet::trait, expect explicit `frame_system::Trait` as supertrait, found `balance :: Trait`, `timestamp :: Trait`.
  --> $DIR/step_008.rs:11:2
   |
11 |     pub trait Trait: balance::Trait + timestamp::Trait {}
   |     ^^^
